--- a/cookmanager/inform.html
+++ b/cookmanager/inform.html
@@ -9,9 +9,9 @@
     <form action="add.php" method="post">
       食材名：<input type="text" name="shokuzai_name" required>
       <br>
-      量　　：<input type="number" min="1" max"9999" name="amount">(g)
+      量　　：<input type="number" min="1" max"9999" name="amount" required>(g)
       <br>
-      期限　：<input type="text" name="date">
+      期限　：<input type="text" name="date" required>
       <br>
       <input type="submit" value="追加">
     </form>
